Fix images name

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -125,7 +125,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-featured-cell-3">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-featured-cell-4">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -137,7 +137,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-featured-cell-7">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-featured-cell-8">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -209,7 +209,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-seller-cell-3">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-seller-cell-4">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -221,7 +221,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-seller-cell-7">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-seller-cell-8">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -292,7 +292,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-sale-off-cell-3">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-sale-off-cell-4">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -304,7 +304,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-sale-off-cell-7">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-sale-off-cell-8">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -375,7 +375,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-rated-cell-3">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-rated-cell-4">
                           <img src="images/furniture/black-chair.png" alt="..." />
@@ -387,7 +387,7 @@
                           <img src="images/furniture/black-chair.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-rated-cell-7">
-                          <img src="images/furniture/Bed.png" alt="..." />
+                          <img src="images/furniture/bed.png" alt="..." />
                         </div>
                         <div class="carousel-cell" id="carousel-top-rated-cell-8">
                           <img src="images/furniture/black-chair.png" alt="..." />
