--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -212,7 +212,7 @@ header {
         width: auto;
         line-height: 40px;
         font-size: 12;
-        color: $text-color;
+        color: $base-color;
         text-decoration: none;
       }
 
