--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,10 +1,14 @@
+$details-bg-color: #fff;
+$cover-photo-bg-color: #f4f5f7;
+
 .post-box {
   margin-bottom: 2rem;
 
   .cover {
     padding: 70% 25px 0 25px;
+
     background: {
-      color: #f4f5f7;
+      color: $cover-photo-bg-color;
       size: cover;
       position: center;
     }
@@ -12,7 +16,7 @@
     .details {
       padding: 15px 20px;
       display: flex;
-      background-color: #ffffff;
+      background-color: $details-bg-color;
       font-size: 14px;
 
       & > * {
@@ -42,7 +46,7 @@
     p {
       font-size: 14px;
       line-height: 24px;
-      color: rgb(103, 103, 103);
+      color: $text-color;
       text-align: justify;
     }
 
@@ -55,12 +59,11 @@
 
 @media (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
   .section--blog-posts {
-    .container {
-      .row {
-        justify-content: center;
-        .col-sm-12 {
-          margin: 0 10px;
-        }
+    .row {
+      justify-content: center;
+
+      .col-sm-12 {
+        margin: 0 10px;
       }
     }
   }
@@ -68,12 +71,11 @@
 
 @media (min-width: 768px) and (max-width: 995px) and (orientation: portrait) {
   .section--blog-posts {
-    .container {
-      .row {
-        justify-content: center;
-        .col-md-6 {
-          max-width: 50%;
-        }
+    .row {
+      justify-content: center;
+
+      .col-md-6 {
+        max-width: 50%;
       }
     }
   }
