Add missing button

--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -30,6 +30,7 @@
                 nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim
                 vehicula, rutrum magna in, ornare enim.
               </p>
+              <div class="more"><span class="btn-main">Read more</span></div>
             </div>
           </div>
         </a>
