WDP190203-18 change repository

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -12,17 +12,11 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
-        <div class="col-auto dots">
-          <ul>
-            <li><a href="#" class="active"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
-        </div>
+        <div class="col-auto dots"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-3">
+    <div class="row products-carousel">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -50,7 +44,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -78,7 +72,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -106,7 +100,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -134,7 +128,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -162,7 +156,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -190,7 +184,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -218,7 +212,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
