Correct carousel-nav semantic, styles and script

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -14,14 +14,14 @@
         </div>
         <div class="col-auto dots">
           <ul class="furniture-carousel-nav">
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
+            <li class="carousel-nav-item"><a></a></li>
           </ul>
         </div>
       </div>
