Fix all bugs & finish the task

--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -15,7 +15,7 @@
           </div>
           <div class="promotional-box">
             <div class="photo-container p-0">
-              <div class="row carousel-hot-deals">
+              <div class="row carousel-hot-deals m-0">
                 <div class="slide-item">
                   <img src="../src/images//furniture1.jpeg" alt="furniture1" />
                 </div>
@@ -36,23 +36,27 @@
                 <span>30 secs</span>
               </div>
             </div>
-            <div class="content">
-              <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a> <a href="#" class="full"></a>
-                <a href="#"></a><a href="#"></a> <a href="#"></a>
+            <div class="promotional-border">
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a><a href="#"></a> <a href="#"></a>
+                </div>
               </div>
-            </div>
-            <div class="line"></div>
-            <div class="actions">
-              <div class="outlines">
-                <a href="#" class="btn-outline"><i class="far fa-eye"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-heart"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-              </div>
-              <div class="price">
-                <div class="old-price btn-main-small no-hover">$ 200.00</div>
-                <div class="btn-main-small no-hover">$ 300.00</div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-eye"></i></a>
+                  <a href="#" class="btn-outline"><i class="fas fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="old-price btn-main-small no-hover">$ 200.00</div>
+                  <div class="btn-main-small no-hover">$ 300.00</div>
+                </div>
               </div>
             </div>
           </div>
@@ -60,7 +64,7 @@
       </div>
       <div class="col-8 slider">
         <div class="promotional-wrapper">
-          <div class="promotional-slider row">
+          <div class="promotional-slider row m-0">
             <div class="slide-img">
               <img src="../src/images/furniture5.jpeg" alt="furniture5" />
             </div>
@@ -76,7 +80,7 @@
             <p class="mb-4">Save up to 50% of all furniture</p>
             <div><a href="#" class="btn-main no-hover">shop now</a></div>
           </div>
-          <div class="row slider-row m-0">
+          <div class="row control-row m-0">
             <div class="col-6 control-arrow p-0">
               <a><i class="fas fa-angle-left"></i></a>
             </div>
