--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import "components/section--features";
 @import "components/section--sale";
 @import "components/section-promotional";
+@import "components/sliders";
 
 body {
   font-family: "Poppins", sans-serif;
