--- a/src/sass/components/_section-promotional.scss
+++ b/src/sass/components/_section-promotional.scss
@@ -3,8 +3,6 @@
 }
 
 .product-card {
-  border: 1px solid $wrapper-border-color;
-
   .panel {
     width: 100%;
     background-color: $form-border-color;
@@ -29,87 +27,85 @@
         background-color: $form-border-color;
       }
     }
-    .tns-nav-active {
-      a {
-        background-color: $primary;
-      }
-    }
+  }
+}
 
-    .tns-visually-hidden,
-    .tns-liveregion {
-      display: none !important;
+.promotional-box {
+  background-color: #ffffff;
+
+  .photo-container {
+    position: relative;
+    padding: 10px 10px 0 10px;
+    background: {
+      color: #f4f5f7;
+      size: contain;
+      position: center;
+      repeat: no-repeat;
+    }
+    overflow: hidden;
+    align-items: flex-end;
+    margin-left: auto;
+    margin-right: auto;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
-  .promotional-box {
-    background-color: #ffffff;
-    margin-bottom: 2rem;
 
-    .photo-container {
-      position: relative;
-      padding: 10px 10px 0 10px;
-      background: {
-        color: #f4f5f7;
-        size: contain;
-        position: center;
-        repeat: no-repeat;
-      }
-      overflow: hidden;
-      align-items: flex-end;
+  .promotional-button {
+    opacity: 0;
+    position: absolute;
+    bottom: 75%;
+    left: 35%;
+    right: 0px;
+  }
 
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-      }
-    }
-
+  .photo-container:hover {
     .promotional-button {
-      opacity: 0;
-      position: absolute;
-      bottom: 75%;
-      left: 35%;
-      right: 0px;
-    }
-
-    .photo-container:hover {
-      .promotional-button {
-        opacity: 1;
-      }
-
-      .timer {
-        opacity: 1;
-      }
-
-      .btn-main-small:not(.no-hover):hover {
-        background-color: $base-color;
-      }
+      opacity: 1;
     }
 
     .timer {
-      text-align: center;
-      box-sizing: border-box;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-around;
-      position: absolute;
-      bottom: 20px;
-      left: 0px;
-      right: 0px;
-      opacity: 0;
-
-      span {
-        display: inline-block;
-        width: 65px;
-        height: 65px;
-        background-color: $form-border-color;
-        color: whitesmoke;
-        border-radius: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 14px;
-      }
+      opacity: 1;
     }
+
+    .btn-main-small:not(.no-hover):hover {
+      background-color: $base-color;
+    }
+  }
+
+  .timer {
+    text-align: center;
+    box-sizing: border-box;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+    right: 0px;
+    opacity: 0;
+
+    span {
+      display: inline-block;
+      width: 65px;
+      height: 65px;
+      background-color: $form-border-color;
+      color: whitesmoke;
+      border-radius: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+    }
+  }
+
+  .promotional-border {
+    border-left: 1px solid $wrapper-border-color;
+    border-right: 1px solid $wrapper-border-color;
+    border-bottom: 1px solid $wrapper-border-color;
 
     .actions {
       padding: 15px 10px 10px 10px;
@@ -127,6 +123,7 @@
         color: $base-color;
       }
     }
+
     .content {
       text-align: center;
       padding: 20px;
@@ -155,30 +152,17 @@
 }
 
 .slider {
-  overflow: hidden;
-
   .promotional-wrapper {
-    // background-image: url("../images/furniture2.jpeg");
-    // background: {
-    //   size: cover;
-    //   repeat: no-repeat;
-    //   position: center center;
-    // }
+    height: auto;
     overflow: hidden;
 
     .promotional-slider {
       position: relative;
-      overflow: hidden;
-      .slide-img {
-        overflow: hidden;
-        width: 100%;
 
-        img {
-          height: 100%;
-          width: 100%;
-          object-fit: cover;
-          overflow: hidden;
-        }
+      img {
+        max-height: 400px;
+        width: 100%;
+        object-fit: content;
       }
     }
   }
@@ -186,8 +170,8 @@
   .promotional-slider:before {
     content: "";
     position: absolute;
-    height: 35%;
-    top: 30%;
+    height: 38%;
+    top: 35%;
     width: 100%;
     background: rgba(0, 0, 0, 0.3);
   }
@@ -220,10 +204,9 @@
     }
   }
 
-  .slider-row {
-    position: absolute;
-    bottom: 0px;
+  .control-row {
     width: 100%;
+    overflow: hidden;
 
     a {
       display: inline-block;
@@ -236,6 +219,7 @@
         color: $font-color;
         background-color: $form-border-color;
       }
+
       &:hover {
         background-color: $primary;
         i {
@@ -244,9 +228,4 @@
       }
     }
   }
-}
-
-.tns-visually-hidden,
-.tns-nav {
-  display: none !important;
 }
