Add RWD layouts

--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -1,7 +1,7 @@
 <div class="section-promotional">
   <div class="container ">
     <div class="row column-row">
-      <div class="col-4 ">
+      <div class="col-4 hot-deals-section">
         <div class="mr-1 product-card">
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div class="col-8 slider">
+      <div class="col-md-8 col-sm-12 slider">
         <div class="promotional-wrapper">
           <div class="promotional-slider row m-0">
             <div class="slide-img">
@@ -81,10 +81,10 @@
             <div><a href="#" class="btn-main no-hover">shop now</a></div>
           </div>
           <div class="row control-row m-0">
-            <div class="col-6 control-arrow p-0">
+            <div class="col-6 control-arrow px-0">
               <a><i class="fas fa-angle-left"></i></a>
             </div>
-            <div class="col-6 control-arrow p-0">
+            <div class="col-6 control-arrow px-0">
               <a><i class="fas fa-angle-right"></i></a>
             </div>
           </div>
