--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -2,7 +2,7 @@
   <div class="container ">
     <div class="row column-row">
       <div class="col-4 hot-deals-section">
-        <div class="mr-1 product-card">
+        <div class="product-card">
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
             <div class="promotional-dots">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-8 col-sm-12 slider">
+      <div class="col-lg-8 col-sm-12 slider pl-4 pr-0">
         <div class="promotional-wrapper">
           <div class="promotional-slider row m-0">
             <div class="slide-img">
