--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -100,6 +100,12 @@ header {
           top: 50%;
           right: 0;
           transform: translate(50%, -50%);
+
+          &__value {
+            text-align: left;
+            margin-left: 10px;
+            width: 28px;
+          }
         }
 
         &:hover {
