--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -43,8 +43,8 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline btn-active"
-                ><i class="far fa-heart"></i
+              <a href="#" class="btn-outline btn-active">
+                <i class="far fa-heart"></i
               ></a>
               <a href="#" class="btn-outline btn-active"
                 ><i class="fas fa-exchange-alt"></i
