change html and add styles to make blog-post link

--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -21,10 +21,12 @@
 
       .date {
         text-align: left;
+        color: $text-color;
       }
 
       .comments {
         text-align: right;
+        color: $text-color;
       }
     }
   }
@@ -33,7 +35,7 @@
     padding: 25px;
 
     h5 {
-      color: $primary;
+      color: $text-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -49,6 +51,31 @@
     .more {
       text-align: center;
       padding-top: 30px;
+
+      &-btn {
+        background-color: $text-color;
+        color: #fff;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 600;
+        padding: 10px 30px;
+      }
+    }
+  }
+}
+
+.blog-link {
+  @media not all and (hover: none) {
+    &:hover {
+      text-decoration: none;
+
+      & .post-info h5 {
+        color: $primary;
+      }
+
+      & .more-btn {
+        background-color: $primary;
+      }
     }
   }
 }
