Add CSS hover to featured & add photo to product

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -49,8 +49,10 @@
       font-weight: 300;
     }
   }
+}
 
-  &.active {
+.link {
+  &:hover {
     i {
       background-color: $primary;
       color: #ffffff;
