--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -8,6 +8,7 @@
     padding: 80% 10px 0 10px;
     background: {
       color: #f4f5f7;
+      image: url("https://via.placeholder.com/253");
       size: contain;
       position: center;
       repeat: no-repeat;
