--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -199,6 +199,7 @@ header {
           padding: 10px;
           width: 68%;
           color: #292929;
+          outline: none;
 
           &:hover {
             -webkit-text-shadow: 0 0 2px white;
@@ -210,6 +211,7 @@ header {
             -ms-transition: all 150ms linear;
             -o-transition: all 150ms linear;
             transition: all 150ms linear;
+            outline: none;
           }
 
           &:active {
@@ -255,6 +257,7 @@ header {
             white-space: nowrap;
             color: #fff;
             width: 100%;
+            outline: none;
           }
 
           ul {
