Add link and hover on featured

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -61,3 +61,17 @@
     }
   }
 }
+
+.link {
+  &:hover {
+    i {
+      background-color: $primary;
+      color: #ffffff;
+      border-color: $primary;
+    }
+
+    .content {
+      color: $primary;
+    }
+  }
+}
