--- a/src/partials/30_section-features.html
+++ b/src/partials/30_section-features.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <a class="link" href="#">
-          <div class="feature-box active">
+          <div class="feature-box">
             <div class="icon"><i class="fas fa-truck"></i></div>
             <div class="content">
               <h5>Free shipping</h5>
