--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -5,6 +5,7 @@
     padding: 70% 25px 0 25px;
     background: {
       color: #f4f5f7;
+      image: url("https://images.unsplash.com/photo-1501504905252-473c47e087f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80");
       size: cover;
       position: center;
     }
