--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@ $header-bg: #723636;
 
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
-
+$grid-base: 10px;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
