--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,7 +1,24 @@
+.product-box .buttons {
+  display: flex;
+  justify-content: space-between;
+
+  a {
+    opacity: 0;
+  }
+}
+
 .product-box {
   background-color: #ffffff;
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
+
+  &:hover .buttons a {
+    opacity: 1;
+  }
+
+  &:hover .no-hover {
+    background: $primary;
+  }
 
   .photo {
     position: relative;
@@ -24,11 +41,6 @@
       border-radius: 50%;
       color: #ffffff;
       padding: 30px 15px 5px 15px;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: space-between;
     }
   }
 
