--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -2,7 +2,7 @@
   <div class="top-bar">
     <div class="container">
       <div class="row">
-        <div class="col text-left">
+        <div class="col-8 text-left">
           <ul>
             <li>
               <a href="#">USD <i class="fas fa-caret-down"></i></a>
@@ -15,7 +15,7 @@
             </li>
           </ul>
         </div>
-        <div class="col text-right">
+        <div class="col-4 text-right">
           <ul>
             <li>
               <a href="#"><i class="fas fa-user"></i> Login</a>
@@ -37,7 +37,7 @@
         <div class="col text-left phone-number">
           <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
         </div>
-        <div class="col text-center">
+        <div class="col text-center logo">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
         <div class="col text-right cart">
