--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -43,10 +43,8 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline btn-active">
-                <i class="far fa-heart"></i
-              ></a>
-              <a href="#" class="btn-outline btn-active"
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
@@ -75,9 +73,7 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline btn-active"
-                ><i class="far fa-heart"></i
-              ></a>
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
@@ -106,7 +102,7 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline btn-active"
+              <a href="#" class="btn-outline active"
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
