--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,16 +33,18 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
-}
 
-.btn-active {
-  background-color: $primary;
-  color: #fff;
-  border-color: $primary;
+  &.active {
+    background-color: $primary;
+    color: $text-hover;
+    border-color: $primary;
 
-  @media not all and (hover: none) {
-    &:hover {
-      border-color: $text-color;
+    @media not all and (hover: none) {
+      &:hover {
+        color: $text-hover;
+        background-color: $text-color;
+        border-color: $text-color;
+      }
     }
   }
 }
