Remove unused class

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -37,7 +37,7 @@
         <div class="col text-left phone-number">
           <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
         </div>
-        <div class="col text-center logo">
+        <div class="col text-center">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
         <div class="col text-right cart">
