--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -44,6 +44,8 @@
           text-decoration: none;
           font-size: 18px;
           display: block;
+          @extend .color-animation;
+          @extend .background-color-animation;
 
           &.active,
           &:hover {
@@ -79,6 +81,8 @@
           height: 13px;
           border-radius: 6px;
           background-color: #e1e1e1;
+          @extend .color-animation;
+          @extend .background-color-animation;
 
           &.active,
           &:hover {
