--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -5,6 +5,8 @@
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
+  @extend .color-animation;
+  @extend .background-color-animation;
 
   &:not(.no-hover):hover {
     color: #ffffff !important;
@@ -28,6 +30,8 @@
   color: #2a2a2a;
   font-size: 13px;
   line-height: 22px;
+  @extend .color-animation;
+  @extend .background-color-animation;
 
   &:hover {
     background-color: #2a2a2a;
