--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,8 @@ header {
         a {
           color: #ffffff;
           font-size: 13px;
+          @extend .color-animation;
+          @extend .background-color-animation;
 
           &:hover {
             color: $primary;
@@ -70,6 +72,8 @@ header {
         display: inline-block;
         position: relative;
         color: #ffffff;
+        @extend .color-animation;
+        @extend .background-color-animation;
 
         .cart-icon {
           background-color: $primary;
@@ -144,6 +148,8 @@ header {
             border-top: 4px solid #ffffff;
             font-weight: 500;
             letter-spacing: 1px;
+            @extend .color-animation;
+            @extend .background-color-animation;
 
             &:hover,
             &.active {
