--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -50,6 +50,11 @@
         @extend .far;
         @extend .fa-star;
 
+        &.active {
+          color: $primary;
+          font-weight: 900;
+        }
+
         &.full {
           @extend .fas;
         }
