--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -54,7 +54,7 @@
 
       &-btn {
         background-color: $text-color;
-        color: #fff;
+        color: $text-color;
         font-size: 16px;
         line-height: 24px;
         font-weight: 600;
